# XF_SmartCar_2023

./: README.md
classfication_trt/: label.txt
muti_classification/: export.py  onnx_inference.py  split_dataset.py  test.py  train.py  utils.py
muti_classification/.ipynb_checkpoints/: export-checkpoint.py  onnx_inference-checkpoint.py  train-checkpoint.py  utils-checkpoint.py
muti_classification/models/: Alexnet.py  BCNN.py  BCNN_ResNet50.py  Densenet.py  Googlenet.py  MobilenetV2.py  MobilenetV3.py  Mobileone.py  RACNN.py  Repvgg.py  ShufflenetV2.py  Squeezenet.py  VGG.py  Xception.py
muti_classification/models/.ipynb_checkpoints/: MobilenetV2-checkpoint.py
ucar_ws/src/: record.py
ucar_ws/src/stdr_gmapping/: CMakeLists.txt  package.xml
ucar_ws/src/stdr_gmapping/launch/: gmapping.launch
ucar_ws/src/ucar_cam/scripts/: usb_camera.py
ucar_ws/src/ucar_controller/log_info/: car_Mileage_info.txt  car_Mileage_info.txt.bp
ucar_ws/src/ucar_map/launch/: gmapping.launch  ucar_gmapping.launch
ucar_ws/src/ucar_race/: CMakeLists.txt  move_baodi.cpp  move_chongci.cpp  package.xml  stable2.doc  stable_point.docx
ucar_ws/src/ucar_race/launch/: ._ucar_race.launch  .ucar_race.launch.swp  ar_code_server.launch  slow1.launch  slow2.launch  slow3.launch  test.launch  ucar_race.launch
ucar_ws/src/ucar_race/src/: ar_code_server.cpp  daohang.cpp  init_pose.py  move.cpp  move.py  move1_slow.cpp  move2_slow.cpp  move3_slow.cpp  music.cpp  my_node1.py  my_node2.py  player_test.cpp  stable_point.docx  test.cpp  ucar_race.cpp  wav.cpp  ~$able_point.docx
(+50 files in other folders)
